removed dark mode button and fixed some links on the nav bar

--- a/app/css/toggles.css
+++ b/app/css/toggles.css
@@ -6,4 +6,8 @@
     right: 0px;   
 }
 
+.avali {
+    width: 100px;
+}
+
 
